test/asm-istiod-15/fortio-tdca/fortio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-tdca
  namespace: fortio-tdca
spec:
  ports:
  - port: 8080
    name: http-echo
  selector:
    app: fortio-tdca

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fortio-tdca
  namespace: fortio-tdca
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        #sidecar.istio.io/logLevel: "TRACE"
        #sidecar.istio.io/enableCoreDump: "true"
        #sidecar.istio.io/privileged: "true"
        #sidecar.istio.io/debug: "true"
        #sidecar.istio.io/componentLogLevel: "config:trace,http2:trace,init:trace,grpc:trace,upstream:trace"

        status.sidecar.istio.io/port: "0"
        policy.istio.io/check: disable
        # Override container ports
        #traffic.sidecar.istio.io/includeInboundPorts: "*"

      labels:
        app: fortio-tdca
        version: v1
    spec:
      containers:
      - name: fortio
        image: "costinm/fortio:latest"
        ports:
         - containerPort: 8080
         - containerPort: 8081
         - containerPort: 8079
        args:
          - server
        resources:
          requests:
            cpu: 250m
            memory: "512Mi"
          limits:
            cpu: 1000m
            memory: "1G"
