test/asm-istiod-15/fortio-tdca/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortio-tdca
  labels:
    istio-env: istiod-td
