test/asm-istiod-15/fortio-tdca/strict.yaml

---
# Strict auth for this namespace - this should be the default.
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: default
  namespace: fortio-tdca
spec:
  peers:
    - mtls: {}

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortiosds
  namespace: fortio-tdca
spec:
  host: fortiosds
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
